# LEDBrain

./: .gitattributes  .gitignore  CMakeLists.txt  GITHUB_RELEASE_INSTRUCTIONS.md  IMPLEMENTATION_PLAN.md  LICENSE  LONG_PATHS_FIX.md  README.md  README.txt  SUMMARY.md  _tmp_commit.sh  build.ps1  fix_long_paths.ps1  fix_sdkconfig.ps1  idf_component.yml  install_esp_idf.ps1  partitions.csv  sdkconfig  sdkconfig.defaults.txt
.github/workflows/: build.yml  release.yml
components/led_engine/: CMakeLists.txt  audio_pipeline.cpp  chipset_info.cpp  color_processing.cpp  framebuffer.cpp  led_engine.cpp  matrix_utils.cpp  pinout.cpp  ppa_accelerator.cpp  ppa_accelerator.hpp  rmt_driver.cpp
components/mdns/: CMakeLists.txt  mdns.c
docs/: AUDIO_ANALYSIS_COMPARISON.md  AUDIO_LATENCY_ANALYSIS.md  EFFECT_DEFAULTS_COMPARISON.md  EFFECT_ENGINE_COMPARISON.md  IMPLEMENTATION_32CH_GEQ.md  LICENSE_COMPATIBILITY.md  ML_EFFECT_GENERATION.md  PPA_AUDIO_SYNC.md  README.md  WLED_MM_P4_ANALYSIS.md  WLED_MM_UNIQUE_FEATURES.md
esp32c6_firmware/: .gitignore  AP_PROVISIONING.md  CMakeLists.txt  FLASHING_GUIDE.md  KONCEPCJA.md  README.md  TROUBLESHOOTING_PROGRAMATOR.md  fix_ch340.ps1  sdkconfig.defaults
esp32c6_firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/: CMakeLists.txt  config.cpp  config.hpp  ddp_tx.cpp  ddp_tx.hpp  effect_engine_selector.cpp  effect_engine_selector.hpp  eth_init.cpp  eth_init.hpp  heartbeat.cpp  heartbeat.hpp  ledfx_effects.cpp  ledfx_effects.hpp  main.cpp  mdns_init.cpp  mqtt_ha.cpp  mqtt_ha.hpp  net_config.hpp  ota.cpp  ota.hpp  sd_card.cpp  sd_card.hpp  temperature_monitor.cpp  temperature_monitor.hpp  web_setup.cpp  web_setup.hpp  wifi_c6.cpp  wifi_c6.hpp  wifi_c6_ctrl.cpp  wifi_c6_ctrl.hpp  wled_discovery.cpp  wled_discovery.hpp  wled_effects.cpp  wled_effects.hpp
main/spiffs/: app.js  config.json  index.html  lang_en.json  lang_pl.json  lang_pl.json.fixed  style.css
main/spiffs/ledfx/: effects.json
main/spiffs/wled/: effects.json
releases/: RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  RELEASE_NOTES_v0.1.6.md
(+16 files in other folders)
